# spnbot

./: .env.example  .gitignore  BACKUP_INSTRUCTIONS.md  DEPLOY.md  README.md  SUPABASE_SETUP.md  alembic.ini  deploy.sh  main.py  migrate.py  pyproject.toml  run_migrations.py  setup_supabase.py  spinbot.nginx.conf  spinbot.service  start_bot.bat  update_env.py
migrations/: env.py
migrations/versions/: 6d15c4163449_initial_migration.py
src/bot/: bot.py
src/bot/filters/: __init__.py  admin.py
src/bot/handlers/: __init__.py  admin.py  start.py
src/bot/keyboards/: __init__.py  admin.py  callback_data.py  inline.py
src/bot/middlewares/: __init__.py  command_router.py  user_db.py
src/bot/utils/: env_manager.py  subscription.py
src/config/: __init__.py  settings.py
src/database/: db.py
src/database/models/: __init__.py  daily_stats.py  game.py  giveaway.py  giveaway_entry.py  prize.py  sponsor_channel.py  user.py
src/database/repositories/: __init__.py  daily_stats_repository.py  game_repository.py  giveaway_repository.py  prize_repository.py  sponsor_channel_repository.py  user_repository.py
src/utils/: cache.py  daily_reset_task.py  helpers.py  ngrok.py  probability_manager.py
src/webapp/: app.py
src/webapp/middlewares/: __init__.py  rate_limiter.py  subscription_check.py  telegram_auth.py
src/webapp/routers/: __init__.py  game.py  giveaways.py  leaders.py  subscription.py  user.py
src/webapp/static/game/: script.js  spin_wheel.html  style.css  test.html
